--- a/app/build.gradle
+++ b/app/build.gradle
@@ -35,20 +35,20 @@ dependencies {
     implementation 'com.squareup.retrofit2:retrofit:2.3.0'
     implementation 'com.squareup.retrofit2:converter-gson:2.3.0'
     implementation 'com.squareup.okhttp3:okhttp:3.9.1'
-    compile 'com.squareup.okhttp3:logging-interceptor:3.3.1'
+    implementation 'com.squareup.okhttp3:logging-interceptor:3.3.1'
     implementation 'com.google.code.gson:gson:2.7'
-    compile 'com.squareup.retrofit2:converter-scalars:2.1.0'
+    implementation 'com.squareup.retrofit2:converter-scalars:2.1.0'
 
     //design
     implementation 'de.hdodenhof:circleimageview:2.1.0'
     implementation 'com.android.support:cardview-v7:26.1.0'
     implementation 'com.daimajia.slider:library:1.1.5@aar'
     implementation 'com.android.support:design:26.1.0'
-    compile 'com.thoughtbot:expandablerecyclerview:1.3'
-    compile 'com.thoughtbot:expandablecheckrecyclerview:1.4'
+    implementation 'com.thoughtbot:expandablerecyclerview:1.3'
+    implementation 'com.thoughtbot:expandablecheckrecyclerview:1.4'
     implementation 'com.androidadvance:topsnackbar:1.1.1'
-    compile 'com.yarolegovich:lovely-dialog:1.0.4'
-    compile 'id.zelory:compressor:2.1.0'
+    implementation 'com.yarolegovich:lovely-dialog:1.0.4'
+    implementation 'id.zelory:compressor:2.1.0'
     implementation 'com.squareup.picasso:picasso:2.71828'
     implementation 'com.theartofdev.edmodo:android-image-cropper:2.3.1'
     implementation 'com.github.bumptech.glide:glide:3.8.0'
