--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -3,11 +3,11 @@
     package="project.roy.socialmedia">
 
     <uses-permission android:name="android.permission.ACCESS_NETWORK_STATE" />
-    <uses-permission android:name="android.permission.INTERNET"/>
+    <uses-permission android:name="android.permission.INTERNET" />
     <uses-permission android:name="android.permission.READ_EXTERNAL_STORAGE" />
-    <uses-permission android:name="android.permission.READ_INTERNAL_STORAGE"/>
-    <uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE"/>
-    <uses-permission android:name="android.permission.WRITE_INTERNAL_STORAGE"/>
+    <uses-permission android:name="android.permission.READ_INTERNAL_STORAGE" />
+    <uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE" />
+    <uses-permission android:name="android.permission.WRITE_INTERNAL_STORAGE" />
 
     <application
         android:name=".Aion"
@@ -26,22 +26,20 @@
         </activity>
         <activity android:name=".ui.login.LoginActivity" />
         <activity android:name=".ui.login.RegisterActivity" />
-        <activity
-            android:name=".ui.home.HomeActivity">
-        </activity>
-        <activity
-            android:name=".ui.account.AccountActivity">
-        </activity>
-        <activity
-            android:name=".ui.reminder.DetailReminderActivity" />
-        <activity android:name=".ui.tips.DetailTipsActivity"/>
+        <activity android:name=".ui.home.HomeActivity"></activity>
+        <activity android:name=".ui.account.AccountActivity"></activity>
+        <activity android:name=".ui.reminder.DetailReminderActivity" />
+        <activity android:name=".ui.tips.DetailTipsActivity" />
         <activity
             android:name=".ui.post.CreatePostActivity"
-            android:theme="@style/AppThemeActionBar"/>
+            android:theme="@style/AppThemeActionBar" />
         <activity
             android:name=".ui.timeline.DetailsTimelineActivity"
-            android:theme="@style/AppThemeActionBar">
-        </activity>
+            android:theme="@style/AppThemeActionBar"></activity>
+        <activity
+            android:name=".ui.detailprofile.DetailProfileActivity"
+            android:label="@string/title_activity_detail_profile"
+            android:theme="@style/AppTheme"></activity>
     </application>
 
 </manifest>
