--- a/app/build.gradle
+++ b/app/build.gradle
@@ -52,4 +52,5 @@ dependencies {
     implementation 'com.squareup.picasso:picasso:2.71828'
     implementation 'com.theartofdev.edmodo:android-image-cropper:2.3.1'
     implementation 'com.github.bumptech.glide:glide:3.8.0'
+    implementation "com.google.android.gms:play-services-gcm:15.0.0"
 }
