--- a/app/build.gradle
+++ b/app/build.gradle
@@ -31,6 +31,7 @@ dependencies {
     androidTestImplementation 'com.android.support.test:runner:1.0.1'
     androidTestImplementation 'com.android.support.test.espresso:espresso-core:2.2.2'
 
+
     //network
     implementation 'com.squareup.retrofit2:retrofit:2.3.0'
     implementation 'com.squareup.retrofit2:converter-gson:2.3.0'
@@ -53,4 +54,7 @@ dependencies {
     implementation 'com.theartofdev.edmodo:android-image-cropper:2.3.1'
     implementation 'com.github.bumptech.glide:glide:3.8.0'
     implementation "com.google.android.gms:play-services-gcm:15.0.0"
+
+    //permission
+    implementation 'pub.devrel:easypermissions:0.2.0'
 }
