--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -53,7 +53,8 @@
 
         <activity android:name=".ui.login.Register2Activity" />
         <activity android:name=".ui.about.AboutActivity" />
-        <activity android:name=".ui.childrendevelopment.ChildrenDevelopmentActivity"></activity>
+        <activity android:name=".ui.childrendevelopment.ChildrenDevelopmentActivity" />
+        <activity android:name=".ui.childrendevelopment.ChildrenDevelopmetResultActivity"></activity>
     </application>
 
 </manifest>
